<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/takePictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />
        <Button
            android:id="@+id/videoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_video"/>
        <Button
            android:id="@+id/switchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_camera"/>
        <Button
            android:id="@+id/flashButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash"/>
    </LinearLayout>


    <com.techyu.trackingroi.Camera.CameraSourcePreview
        android:id="@+id/mPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <com.techyu.trackingroi.Camera.GraphicOverlay
            android:id="@+id/mGraphicOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.techyu.trackingroi.Utils.DynamicWave
            android:id="@+id/dynamic_wave"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
    </com.techyu.trackingroi.Camera.CameraSourcePreview>

    <TextView
        android:id="@+id/heartrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=" "
        android:visibility="visible"
        android:textSize="20sp"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/cameraVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cameraOne"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/author"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/eulerX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="10dp"
        android:text="@string/oulerZ"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/eulerY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="10dp"
        android:text="@string/oulerZ"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/eulerZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="70dp"
        android:background="@android:color/black"
        android:text="@string/oulerY"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/status"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:id="@+id/ivAutoFocus"
        android:contentDescription="@null"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/btn_autofocus"
        android:visibility="gone"/>

</FrameLayout>